# trino-localstack

./: .ansible-lint  .editorconfig  .envrc  .gitignore  .yamllint  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: polaris-admin-tool.yml  polaris-server-image.yml
config/: cluster-config.yaml
k8s/features/: localstack.yaml
k8s/polaris/: deployment.yaml  kustomization.yaml  rbac.yaml  sa.yaml  service.yaml
k8s/polaris/jobs/: job-bootstrap.yaml  job-purge.yaml  kustomization.yaml
k8s/trino/: trino.yaml
polaris-forge-setup/: ansible.cfg  catalog_cleanup.yml  catalog_setup.yml  cluster_checks.yml  prepare.yml
polaris-forge-setup/defaults/: main.yml
polaris-forge-setup/tasks/: drop_tables.yml
polaris-forge-setup/templates/: bootstrap-credentials.env.j2  persistence.xml.j2  polaris.env.j2  postgresql.yml.j2
polaris-forge-setup/templates/notebooks/: verify_setup.ipynb.j2
