[project]
name = "polaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscli-local>=0.22.0",
    "cryptography>=44.0.0",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pyiceberg[s3fs]>=0.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ansible>=11.2.0",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.2",
    "ipykernel>=6.29.5",
    "kubernetes>=32.0.0",
    "watchdog>=6.0.0",
    "yamllint>=1.35.1",
]
